--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section id="section3">
       <div class="divisionSec2">
         <hr class="lineSec2" />
-        <h2 id="whoIAm">Stack</h2>
+        <h2 id="whoIAm">Skills</h2>
         <hr class="lineSec2" />
       </div>
       <div class="stack">
@@ -304,7 +304,7 @@
             </li>
             <li class="socialMedia_wtsp">
               <a
-                href="https://wa.me/573209389966?text=I%20have%20just%20seen%20your%20portfolio%20and%20want%20to%20contact%20with%20you"
+              href="https://wa.me/+5491153150461?text=I%20have%20just%20seen%20your%20portfolio%20and%20want%20to%20contact%20with%20you"
                 target="_blank"
                 ><img src="src/assets/img/social/whatsapp-icon.png" alt=""
               /></a>
