--- a/index.html
+++ b/index.html
@@ -332,6 +332,6 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <script src="main.js"></script>
+    <script src="src/assets/js/main.js"></script>
   </body>
 </html>
